Report test failures to Travis. Continue after test failures.