@@ -8,6 +8,7 @@ allprojects {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
 
+    apply plugin: ProvidedPlugin
     apply plugin: "maven-publish"
 
     publishing {
@@ -24,12 +25,28 @@ allprojects {
             }
         }
     }
+
+    test {
+        exclude "**/*\$*" // otherwise gradle runs static inner classes like TestRunnerSequenceTest$SimpleTest
+        testLogging {
+            events "failed"
+            exceptionFormat "short"
+
+            info {
+                events "started", "skipped", "failed"
+                exceptionFormat "full"
+            }
+        }
+
+        minHeapSize = "1024m"
+        maxHeapSize = "2048m"
+        jvmArgs '-XX:MaxPermSize=1024m'
+    }
 }
 
 def subshadowRE = /robolectric-shadows\/shadows-core\/v(.*)$/
 configure(subprojects.findAll { project -> project.name =~ subshadowRE }) {
     apply plugin: ShadowsPlugin
-    apply plugin: ProvidedPlugin
 
     def match = project.name =~ subshadowRE
     def androidApi = Integer.parseInt(match[0][1])
@@ -81,7 +98,7 @@ configure(subprojects.findAll { project -> project.name =~ subshadowRE }) {
         compile project(":robolectric-utils")
 
         // Compile dependencies
-        compile "com.intellij:annotations:12.0"
+        provided "com.intellij:annotations:12.0"
         compile "com.almworks.sqlite4java:sqlite4java:0.282"
         provided("org.robolectric:android-all:$robolectricVersion") { force = true }
         compile "com.ibm.icu:icu4j:53.1"
@@ -99,18 +116,18 @@ configure(subprojects.findAll { project -> project.name =~ subshadowRE }) {
     }
 
     task copyNatives(type: Copy) {
-        outputs.dir file("${project.buildDir}/resources/main")
+        outputs.dir file("${buildDir}/resources/main")
 
-        project.configurations.runtime.forEach { File file ->
+        configurations.runtime.files.each { File file ->
             def nativeJarMatch = file.name =~ /lib.*-natives-(.*)\.jar/
             if (nativeJarMatch) {
                 inputs.file file
 
-                def platformName = match[0][1]
+                def platformName = nativeJarMatch[0][1]
                 from(zipTree(file)) { rename { f -> "$platformName/$f" } }
             }
 
-            into project.file("${project.buildDir}/resources/main")
+            into project.file("$buildDir/resources/main")
         }
     }
 
